--- a/src/index.template.html
+++ b/src/index.template.html
@@ -6,6 +6,16 @@
     <%= productName %>
   </title>
 
+  <!-- Google Tag Manager -->
+  <script>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-PGWDG8S');</script>
+  <!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <meta name="description" content="<%= productDescription %>">
   <meta name="format-detection" content="telephone=no">
@@ -70,7 +80,12 @@
 </head>
 
 <body>
-  <!-- DO NOT touch the following DIV -->
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PGWDG8S" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+
+  <!-- DO NOT touch the following Vue app DIV -->
   <div id="q-app"></div>
 </body>
 
