--- a/src/index.template.html
+++ b/src/index.template.html
@@ -6,15 +6,30 @@
     <%= productName %>
   </title>
 
-  <!-- Google Tag Manager -->
-  <script>(function (w, d, s, l, i) {
+  <!-- Google Tag Manager - Production-->
+  <!-- <script>
+    (function (w, d, s, l, i) {
       w[l] = w[l] || []; w[l].push({
         'gtm.start':
           new Date().getTime(), event: 'gtm.js'
       }); var f = d.getElementsByTagName(s)[0],
         j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
           'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-PGWDG8S');</script>
+    })(window, document, 'script', 'dataLayer', 'GTM-PGWDG8S');
+  </script> -->
+  <!-- End Google Tag Manager -->
+
+  <!-- Google Tag Manager - Test-->
+  <script>
+    (function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-WFVVKMH');
+  </script>
   <!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <meta name="description" content="<%= productDescription %>">
@@ -80,8 +95,13 @@
 </head>
 
 <body>
-  <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PGWDG8S" height="0" width="0"
+  <!-- Google Tag Manager (noscript) Prod -->
+  <!-- <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PGWDG8S" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript> -->
+  <!-- End Google Tag Manager (noscript) -->
+
+  <!-- Google Tag Manager (noscript) Test -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WFVVKMH" height="0" width="0"
       style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
 
