--- a/src/index.template.html
+++ b/src/index.template.html
@@ -8,19 +8,19 @@
 
   <!-- Google Tag Manager - Production-->
   <!-- <script>
-    (function (w, d, s, l, i) {
+    <!-- (function (w, d, s, l, i) {
       w[l] = w[l] || []; w[l].push({
         'gtm.start':
           new Date().getTime(), event: 'gtm.js'
       }); var f = d.getElementsByTagName(s)[0],
         j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
           'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-PGWDG8S');
+    })(window, document, 'script', 'dataLayer', 'GTM-PGWDG8S'); -->
   </script> -->
   <!-- End Google Tag Manager -->
 
   <!-- Google Tag Manager - Test-->
-  <script>
+  <!-- <script>
     (function (w, d, s, l, i) {
       w[l] = w[l] || []; w[l].push({
         'gtm.start':
@@ -29,7 +29,7 @@
         j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
           'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
     })(window, document, 'script', 'dataLayer', 'GTM-WFVVKMH');
-  </script>
+  </script> -->
   <!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <meta name="description" content="<%= productDescription %>">
