Changed Google Analytics measurement ID for prod

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -7,19 +7,6 @@
   </title>
 
   <!-- Google Tag Manager - Production-->
-  <!-- <script>
-    <!-- (function (w, d, s, l, i) {
-      w[l] = w[l] || []; w[l].push({
-        'gtm.start':
-          new Date().getTime(), event: 'gtm.js'
-      }); var f = d.getElementsByTagName(s)[0],
-        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
-          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-PGWDG8S'); -->
-  </script> -->
-  <!-- End Google Tag Manager -->
-
-  <!-- Google Tag Manager - Test-->
   <script>
     (function (w, d, s, l, i) {
       w[l] = w[l] || []; w[l].push({
@@ -28,8 +15,21 @@
       }); var f = d.getElementsByTagName(s)[0],
         j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
           'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-WFVVKMH');
+    })(window, document, 'script', 'dataLayer', 'G-FKCPQ3CGPC');
   </script>
+  <!-- End Google Tag Manager -->
+
+  <!-- Google Tag Manager - Test-->
+  <!-- <script>
+    (function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-WFVVKMH');
+  </script> -->
   <!-- End Google Tag Manager -->
   <meta charset="utf-8">
   <meta name="description" content="<%= productDescription %>">
@@ -96,13 +96,13 @@
 
 <body>
   <!-- Google Tag Manager (noscript) Prod -->
-  <!-- <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PGWDG8S" height="0" width="0"
-      style="display:none;visibility:hidden"></iframe></noscript> -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PGWDG8S" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
 
   <!-- Google Tag Manager (noscript) Test -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WFVVKMH" height="0" width="0"
-      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WFVVKMH" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript> -->
   <!-- End Google Tag Manager (noscript) -->
 
   <!-- DO NOT touch the following Vue app DIV -->
