--- a/src/index.template.html
+++ b/src/index.template.html
@@ -7,6 +7,16 @@
   </title>
 
   <!-- Google Tag Manager - Production-->
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-155206112-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-155206112-1');
+  </script>
+
   <script>
     (function (w, d, s, l, i) {
       w[l] = w[l] || []; w[l].push({
@@ -15,7 +25,7 @@
       }); var f = d.getElementsByTagName(s)[0],
         j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
           'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'G-FKCPQ3CGPC');
+    })(window, document, 'script', 'dataLayer', 'GTM-PGWDG8S');
   </script>
   <!-- End Google Tag Manager -->
 
